# inochi2d-rs

./: .gitignore  Cargo.toml  ChangeLog  README.md
.github/workflows/: build_documentation.yml
examples/: parse.rs  render.rs  transcode-textures.rs  wasm_example.html  wasm_example.js
src/: glow.rs  lib.rs  parser.rs  tga.rs  wasm.rs
src/gl/: framebuffer.rs  mod.rs  program.rs  texture.rs  vbo.rs
